Bug 44293 - FORMATTING: Format ordinal number suffixes (1st -> 1^st) doesn't work in Portuguese
Summary: FORMATTING: Format ordinal number suffixes (1st -> 1^st) doesn't work in Port...
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Writer (show other bugs)
Version:
(earliest affected)
3.5.0 Beta2
Hardware: Other All
: medium normal
Assignee: Not Assigned
URL:
Whiteboard: target:24.8.0
Keywords:
Depends on:
Blocks: AutoCorrect-Complete
  Show dependency treegraph
 
Reported: 2011-12-29 13:52 UTC by Gustavo Pacheco
Modified: 2024-05-15 14:11 UTC (History)
5 users (show)

See Also:
Crash report or crash signature:


Attachments
Portuguese ordinal numbers suffixes (3.36 KB, image/png)
2011-12-29 13:52 UTC, Gustavo Pacheco
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Gustavo Pacheco 2011-12-29 13:52:55 UTC
Created attachment 54959 [details]
Portuguese ordinal numbers suffixes

"Format ordinal number suffixes (1st -> 1^st) " in Tools/AutoCorrect Options/Localized Options doesn't work in portuguese. 

The specification of the replacements is:

For singular:
replace the "ro" after the number for ^.o (male genre);
replace the "ra" after the number for ^.a (female genre). 

For plural:
replace the "ros" after the number for ^.os (male genre);
replace the "ras" after the number for ^.as (female genre). 

This configuration solve the problem for both pt(Portugal) and pt-BR(Brazil). Please, see the examples in the attached image.

Thanks,
Gustavo Pacheco.
Comment 1 Rainer Bielefeld Retired 2013-04-08 15:50:30 UTC
@Gustavo Pacheco
Still a problem for you?
Did that work in more early versions for you? For (from OOo9 inherited problems please use Version 3.3.0 Beta2
Comment 2 Julien Nabet 2014-05-03 11:39:22 UTC
On pc Debian x86-64 with master sources (future 4.3.0) updated yesterday, I gave a try and reproduced the problem.

I contacted Sérgio Marques (from https://wiki.documentfoundation.org/Language_Teams), here are more information:

1a and 1o are converted to 1ª and 1º but they should be converted to 1.ª and 1.º
The examples in bugtracker still dont work but they are valid and should be like screenshot attached in bug report.

So there are 2 ways to abbreviate:
- 1a / 1o
- 1ra / 1ro

idem for plural:
- 43as/43ras
- 43os/43ros

Each time the 2 ways should return the same.
Comment 3 tommy27 2015-08-17 14:40:29 UTC
still reproducible with LibO 5.1.0.0.alpha1+
Build ID: 7d3fa6bae9f7a755eb2d0ca24bf1afd5f3646bb7
TinderBox: Win-x86@39, Branch:master, Time: 2015-08-09_08:38:08
Locale: it-IT (it_IT)
Comment 4 Thomas Lendo 2018-10-06 22:31:19 UTC
Set back from 'enhancement' to 'normal' bug.
Comment 5 QA Administrators 2019-10-07 03:00:55 UTC Comment hidden (obsolete)
Comment 6 QA Administrators 2021-10-07 03:53:50 UTC Comment hidden (obsolete)
Comment 7 QA Administrators 2023-10-08 03:16:15 UTC Comment hidden (obsolete)
Comment 8 Commit Notification 2024-05-15 08:32:17 UTC
László Németh committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/7cc712eaa6757a461ac68532d77add2a49bd9181

tdf#44293 sw AutoCorrect: fix Portuguese ordinal indicators

It will be available in 24.8.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 9 László Németh 2024-05-15 08:57:16 UTC
@Gustavo et al.: thanks for the report and feedback!