tdf#44293 sw AutoCorrect: fix Portuguese ordinal indicators

Add missing dot, support plural and alternative forms with 'r':

– add missing dot: 1a -> 1.ª, 1o -> 1.º

– support plural forms: 43as -> 43.ªˢ, 43os -> 43ºˢ

- support alternative forms:

  1ra -> 1.ª, 1ro -> 1.º, 43ras -> 43.ªˢ, 43ros -> 43.ºˢ

Change-Id: Ibaeae958ca209edffb13f611ee8a71c80bf15a26
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/167649
Tested-by: Jenkins
Reviewed-by: László Németh <nemeth@numbertext.org>